tests/grayskull/sfpi/gold/warn_spill.txt
In file included from test.h:17,
                 from warn.cc:11:
../../../include/sfpi.h: In function 'void spill()':
../../../include/sfpi.h:853:11: fatal error: cannot store sfpu register (register spill)
  853 |     assign(__builtin_rvtt_sfpxloadi(val.get_format(), val.get()));
      |     ~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
compilation terminated.
